# blanket-ml

./: .gitignore  Makefile  README.md  config.toml  pyproject.toml  setup.py  vscode.code-workspace
beat_analytics/: __init__.py  bigquery.py  edge_web.py  email.py  plan.py  user.py
src/blanketml/: __init__.py  config.py  file.py  finetuning.py  main.py  model.py  parser.py  script.py
src/blanketml/model/: openai.py
tests/: config.toml  config_test.py  parser_test.py
